<resources>
    <string name="app_name">Taxev</string>

    <!--  choose auth activity  -->
    <string name="login_label">Masuk</string>
    <string name="register_label">Daftar</string>

    <!--  login activity  -->
    <string name="login">Masuk</string>
    <string name="email_label">Email</string>
    <string name="email_hint">e.g johndoe@gmail.com</string>
    <string name="password_label">Password</string>
    <string name="or_label">atau</string>
    <string name="login_btn_label">atau</string>
    <string name="change_auth">Daftar Sekarang</string>

    <!--  register activity  -->
    <string name="register">Data Pribadi</string>
    <string name="register_account">Buat Akun</string>
    <string name="name_label">Nama Lengkap</string>
    <string name="school_label">Asal Sekolah</string>
    <string name="city_label">Asal Kota</string>
    <string name="birthyear_label">Tanggal Lahir</string>
    <string name="username_label">Username</string>
    <string name="register_email_label">Email</string>
    <string name="register_password_label">Password</string>
    <string name="register_next">Selanjutnya</string>

    <!--  main fragment  -->
    <string name="click_power_placeholder">Click Power</string>
    <string name="logout_dialog_label">Keluar</string>
    <string name="cancel_quiz_dialog_label">Tutup</string>
    <string name="accept_quiz_dialog_label">Ambil Kuis</string>
    <string name="finish_quiz">Selesai</string>
    <string name="earth_dialog">Bumi</string>
    <string name="sea_dialog">Bioma Laut</string>
    <string name="land_dialog">Bioma daratan</string>

    <!--  user creature fragment  -->
    <string name="user_creature_title">Spesies Kamu</string>
    <string name="user_creature_empty">Kamu belom memiliki spesies</string>

    <!--  user creature detail fragment  -->
    <string name="classification_label">Klasifikasi</string>
    <string name="evolution_label">Evolusi</string>

    <!--  evolution fragment  -->
    <string name="evolution_title">Evolusi</string>

    <!--  species fragment  -->
    <string name="creature_title">Spesies</string>

    <!--  quiz fragment  -->
    <string name="cancel_quiz_finish">Kembali</string>
    <string name="confirmation_quiz_finish">Kirim</string>

    <!--  leaderboard fragment  -->
    <string name="leaderboard_title">Papan Peringkat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>